# jowork

./: .claassistant.yml  .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .mcp.json  .npmrc  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  LICENSE  PLAN.md  README.md  README.zh-CN.md  README.zh.md  SKILL.md  TODOS.md  docker-compose.yml  fly.toml  package-lock.json  package.json  plan-dashboard-gaps.md  plan-v3.md  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
.claude/: settings.json
.githooks/: pre-push
apps/jowork/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/jowork/src-tauri/capabilities/: default.json
apps/jowork/src-tauri/icons/: icon.icns
apps/jowork/src-tauri/src/: lib.rs  main.rs
docs/: CNAME  INSTALL.md  JOWORK-PLAN.md  JOWORK-README.md  JOWORK-REQUIREMENTS.md  OSS-SYNC-POLICY.md  custom-domain.md  github-setup.sh  index.html  quick-start.md  roadmap-ai-analysis-pipeline.md
mcp/: feedback-server.mjs
memory/: MEMORY.md
plans/: phase-0-skeleton.md  phase-1-engine-conversation.md  phase-2-connector-mcp.md  phase-3-memory-skills.md  phase-4-desktop-integration.md  phase-5-scheduler-channels.md  phase-6-auth-billing-team.md  phase-7-sync-i18n-update.md  phase-8-onboarding-polish.md  tech-decisions.md
public/: admin.html  ai-services.html  billing.html  chat.html  dashboard.html  data-config.html  feedback-widget.js  file-viewer.html  files.html  geek.html  i18n.js  index.html  logs.html  offline.html  onboarding.html  services-guard.js  settings.html  setup.html  shell.html  theme.js
scripts/: Windows打包说明.md  build-edge-sidecar.mjs  build-i18n.js  build-sidecar.sh  build-windows.bat  build-windows.ps1  check-opensource.sh  deploy.sh  dev-loop.sh  dev-stripe.sh  e2e-full.sh  install-app.sh  install-git-hooks.sh  jowork-claude-runner.sh  (+13 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+541 files in other folders)
