[package]
name = "jowork-app"
version = "0.1.0"
description = "Jowork Desktop"
authors = ["Jowork"]
edition = "2021"

[lib]
name = "jowork_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
