[package]
name = "fluxvita"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["time", "net", "io-util", "sync", "macros"] }
futures-util = "0.3"
native-tls = "0.2"
tokio-native-tls = "0.3"
tokio-tungstenite = "0.24"
window-vibrancy = "0.5"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
portable-pty = "0.8"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "fluxvita_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
